--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "styled-components-modifiers": "^1.2.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
