--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^4.14.1",
     "polished": "^3.6.5",
     "react": "^16.13.1",
+    "react-cool-inview": "^1.1.2",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
