--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "anysort": "^2.0.0",
     "node-sass": "^4.14.1",
     "polished": "^3.6.5",
     "react": "^16.13.1",
